include publish settings

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ DocProject/Help/html
 publish/
 
 # Publish Web Output
-*.[Pp]ublish.xml
+# *.[Pp]ublish.xml
 *.azurePubxml
 # TODO: Comment the next line if you want to checkin your web deploy settings 
 # but database connection strings (with potential passwords) will be unencrypted
@@ -155,7 +155,7 @@ ClientBin/
 *.dbmdl
 *.dbproj.schemaview
 *.pfx
-*.publishsettings
+# *.publishsettings
 node_modules/
 
 # RIA/Silverlight projects
