--- a/Tematis.Resto.Web/Tematis.Resto.Web.csproj
+++ b/Tematis.Resto.Web/Tematis.Resto.Web.csproj
@@ -230,7 +230,9 @@
     <Content Include="Global.asax" />
     <Content Include="posanywhere.azurewebsites.net.PublishSettings" />
     <None Include="Properties\PublishProfiles\posanywhere - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\posanywhere - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\posanywhere - Web Deploy.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
